--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation "com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0" // 개발 시에만 사용 권장
+	implementation 'com.h2database:h2'
 	compileOnly 'org.projectlombok:lombok'
 	compileOnly 'com.google.api-client:google-api-client:1.34.0'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
