JWT 토큰 생성 및 인증 구현

--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,2 +1,2 @@
-spring.profiles.include=aws
+spring.profiles.include=aws,auth
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
