--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'com.h2database:h2'
 	implementation 'org.projectlombok:lombok'
-	compileOnly 'com.google.api-client:google-api-client:1.34.0'
+	implementation 'com.google.api-client:google-api-client:1.34.0'
 	implementation 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
